@startuml

title __ACTIVITY's Class Diagram__\n

  namespace Activity {
    class Activity.AtyAdd {
        - butFriend : Button
        - butGroup : Button
        - etSearch : EditText
        # onCreate()
        - initView()
    }
  }
  

  namespace Activity {
    class Activity.AtyChatRoom {
        {static} + adapterChatMsgList : AdapterChatMsg
        {static} + chatMsgList : List<ChatMsg>
        {static} + handler : Handler
        - btnSend : Button
        - chatObj : String
        - group : String
        - gson : Gson
        - listView : ListView
        - myMsg : EditText
        # onCreate()
        - initViews()
        - loadChatMsg()
        - sendToChatObj()
    }
  }
  

  namespace Activity {
    class Activity.AtyLoginOrRegister {
        - btnLogin : Button
        - btnRegister : Button
        - etInsurePassword : EditText
        - etLoginPassword : EditText
        - etLoginUsername : EditText
        - etRegisterPassword : EditText
        - etRegisterUsername : EditText
        - gson : Gson
        - tabHost : TabHost
        + onClick()
        # onCreate()
        - initViews()
        - login()
        - register()
    }
  }
  

  namespace Activity {
    class Activity.AtyMain {
        - context : Context
        - tabLayout : TabLayout
        - tabList : List<Tab>
        - viewPager : ViewPager
        # onActivityResult()
        # onCreate()
        - initViews()
    }
  }
  

  namespace Activity {
    class Activity.AtyWelcome {
        ~ handler : Handler
        {static} - DELAY : int
        {static} - GO_GUIDE : int
        {static} - GO_HOME : int
        # onCreate()
        - goHome()
        - initLoad()
    }
  }
  

  Activity.AtyAdd -up-|> androidx.appcompat.app.AppCompatActivity
  Activity.AtyAdd o-- View.TitleBar : titleBar
  Activity.AtyChatRoom -up-|> androidx.appcompat.app.AppCompatActivity
  Activity.AtyChatRoom o-- View.TitleBar : titleBar
  Activity.AtyLoginOrRegister .up.|> android.view.View.OnClickListener
  Activity.AtyLoginOrRegister -up-|> androidx.appcompat.app.AppCompatActivity
  Activity.AtyLoginOrRegister o-- Server.ServerManager : serverManager
  Activity.AtyMain -up-|> androidx.appcompat.app.AppCompatActivity
  Activity.AtyMain o-- View.LayoutChats : chats
  Activity.AtyMain o-- View.LayoutContacts : contacts
  Activity.AtyMain o-- View.LayoutMoments : moments
  Activity.AtyMain o-- View.TitleBar : titleBar
  Activity.AtyWelcome -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
